render: Avoid extra margin below images.
Set 'vertical-align: bottom' on the img-wrapper <div> that
wraps <svg> and <picture> elements. Since the wrapper uses
'display: inline-block', some extra space was apparently
being reserved below the baseline for descenders even when
no text is present.

--- a/render/inline/nonamp.scss
+++ b/render/inline/nonamp.scss
@@ -3,6 +3,7 @@
 .img-wrapper {
   display: inline-block;
   position: relative; // needed since thumbnail is absolute
+  vertical-align: bottom; // https://stackoverflow.com/a/27999850
   & > svg {
     position: absolute;
   }
